# embedded-ml

digits-recognition-model/: .gitignore  CMakeLists.txt  basic_model_c_array.h  basic_model_converted.tflite  convert_to_c_array.py  convert_to_tflite.py  dataset.cpp  dataset.hpp  digits-recognition-model.cpp  model-training.cpp  model-training.hpp  model.py  model2.py  model_from_scratch.py  stackoverflow_answer.py
digits-recognition-model/saved_model/: saved_model.pb
sine-wave-model/: sine_wave_model.py
sine-wave-model/models/: sine_model.tflite  sine_model_no_quant.tflite
sine-wave-model/models/sine_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
sine-wave-model/models/sine_model/variables/: variables.data-00000-of-00001  variables.index
tflite-cmake-wb55/: reference.txt
tflite-wb55-bare-metal/: .gitignore  Makefile  compile_model.sh  init.sh  link.ld  main.c  main.cc  objdump_firmware  reference.txt  sine_model_stolen.h  temp
tflite-wb55-bare-metal/cc/: uart.cc
tflite-wb55-bare-metal/inc/: common.hpp
tflite-x-cube-ai/: .cproject  .project  STM32WB55RGVX_FLASH.ld  tflite-x-cube-ai.ioc
tflite-x-cube-ai/.ai/: basic_model_basic_model_converted.tflite_c_info.json  basic_model_null_c_info.json
tflite-x-cube-ai/Core/Inc/: main.h  stm32wbxx_nucleo_conf.h
tflite-x-cube-ai/Core/Src/: main.c  stm32wbxx_hal_msp.c
tflite-x-cube-ai/X-CUBE-AI/App/: app_x-cube-ai.c  app_x-cube-ai.h  basic_model.c  basic_model.h  basic_model_config.h  basic_model_data.c  basic_model_data.h  basic_model_data_params.c  basic_model_data_params.h  basic_model_generate_report.txt
